# ##########
# Phenotype 2.6-current Changelog
# ##########
# please paste in here summaries of relevant changes
# 
# this info should be used to create the release notes for
# 2.6 stable later without digging into ALL the svn logs
# newest change at the top
# ##########

r208 - 2007/10/26
- changed creation of include template ids: now uses separated numbers for every object
- changed creation of component template ids: now uses separated numbers for every object
- introduced changelog ;-)
- 