@@ -121,21 +121,17 @@ if ($_REQUEST["b"]==0 OR $_REQUEST["b"]==2)
 	$anzahl_templates--;
   }
 
-  if ($plus !="")
+  if ($plus !="" || isset($_REQUEST["ttp_plus_x"]))
   {
+		$sql = "SELECT MAX(tpl_id) AS new_id FROM extra_template WHERE ext_id = $id";
+		$rs = $myDB->query($sql);
+		$row = mysql_fetch_array($rs);
+		$newId = $row['new_id'] + 1;
+		
     $mySQL = new SQLBuilder();
+		$mySQL->addField("tpl_id",$newId,DB_NUMBER);
     $mySQL->addField("ext_id",$id,DB_NUMBER);    
-    $mySQL->addField("tpl_bez","TPL_".($c+1));    
-    $sql = $mySQL->insert("extra_template");
-    $myDB->query($sql);  
-  }
-
-  if (isset($_REQUEST["ttp_plus_x"]))
-  {
-    // 1. Template
-    $mySQL = new SQLBuilder();
-    $mySQL->addField("ext_id",$id,DB_NUMBER);    
-    $mySQL->addField("tpl_bez","TPL_".($c+1));   
+		$mySQL->addField("tpl_bez","TPL_". $newId);    
     $sql = $mySQL->insert("extra_template");
     $myDB->query($sql);  
   }
